Open first GitHub Pages powered version of analysis of EUC

--- a/index.html
+++ b/index.html
@@ -14597,13 +14597,15 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<h2 id="Welcome-to-my-EUC-project!">Welcome to my EUC project!<a class="anchor-link" href="#Welcome-to-my-EUC-project!">&#182;</a></h2><p><strong>I'm riding Kingsong 16S. Unicycles are the most awesome electrified vehicles you could ever have. I want to meet more riders here in Lithuania</strong></p>
 <ul>
 <li>How to start riding EUC?</li>
-<li>Indications of range are rarely accurate. How to find a real range of a certain EUC? <a href="euc_research.ipynb">Go to my research</a></li>
-<li>What's the best price per range rate you can get on different brands? <a href="euc_research.ipynb">Go to my research</a></li>
+<li>Indications of range are rarely accurate. How to find a real range of a certain EUC? <a href="./euc_research.html">Go to my research</a></li>
+<li>What's the best price per range rate you can get on different brands? <a href="./euc_research.html">Go to my research</a></li>
 <li>What about waterproof?</li>
 <li>Can't you get it cheaper?</li>
 </ul>
+<p>Write <a href="simonas.mamaitis@gmail.com">simonas.mamaitis@gmail.com</a> for more info.</p>
 
 </div>
 </div>
