Open first GitHub Pages powered version of analysis of EUC

--- a/index.html
+++ b/index.html
@@ -14601,7 +14601,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 <ul>
 <li>How to start riding EUC?</li>
 <li>Indications of range are rarely accurate. How to find a real range of a certain EUC? <a href="./euc_research.html">Go to my research</a></li>
-<li>What's the best price per range rate you can get on different brands? <a href="./euc_research.html">Go to my research</a></li>
+<li>What's the best price per range rate you can get on different brands? <a href="./price_research.html">Go to my research</a></li>
 <li>What about waterproof?</li>
 <li>Can't you get it cheaper?</li>
 </ul>
