Update GitHub Pages powered version of analysis of EUC: add index files update

--- a/index.html
+++ b/index.html
@@ -14605,7 +14605,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 <li>Gamintojai dažniausiai nurodo išpūstus vienu įkrovimu nuvažiuojamus atstumus. <a href="./refs/range_research/euc_research_LT.html">Kaip juos nustatyti tiksliau?</a></li>
 <li>Skirtingų vienaračių modelių kainos ir nuvažiuojami atstumai skiriasi. <a href="./refs/price_research/price_research.html">Kaip išsirinkti optimalų variantą už prieinamą kainą?</a></li>
 <li>Apie apsaugą nuo drėgmės.</li>
-<li>Kaip įmanoma išsisukti su pigesnėmis kainomis?</li>
+<li>Kaip įmanoma išsisukti su pigesnėmis kainomis? <a href="./refs/advertisements/advertisements.html">Laikina nuoroda į parduodamus vienaračius per skelbimus</a></li>
 </ul>
 
 </div>
